--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_title"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".DefaultPage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +28,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/app_title"
             />
 
         <activity
@@ -37,7 +37,6 @@
             />
 
         <activity
-            android:theme="@style/AppTheme.NoActionBar"
             android:name=".ChatPage"
             android:label="@string/app_name"
             />
